--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -85,7 +85,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2> La chouette agence est une agence de web design qui aide <br>
+					les entreprises à devenir attractives et visibles sur Internet </h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
