--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<img class= "responsive" alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
 
 			</div>
 		</div>
@@ -156,7 +156,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<img class="responsive" alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
