added new keywords

--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Contact La Chouette Agence Lyon, contact chouette agence, contact webdesign agence Lyon, contact webdesign agence proffessionnelle Lyon">
     <meta name="description" content=" Contact La Chouette Agence, agence de web design ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
